# CQU_EIE

./: .gitattributes  .gitignore  README.md
AutoSoftDev/desPattern/include/: agx.hpp  display.hpp  observer.hpp  rand.hpp
AutoSoftDev/desPattern/src/: camera.cpp  display.cpp  lidar.cpp  student.cpp
AutoSoftDev/objectOriented-afClass/6-2/: main.cpp
AutoSoftDev/objectOriented-afClass/6-5/: main.cpp
CPP/base/const/: main.cpp
CPP/base/冒泡/: main.cpp
CPP/base/敲桌子/: main.cpp
CPP/calculator/: main.cpp
CPP/sumofTwoNumbers/: main.cpp  readme.md
CPP/template/: main.cpp
android/: README.md
android/PageSwitching/: settings.gradle.kts
android/PageSwitching/app/: build.gradle.kts
android/appOne/: settings.gradle.kts
android/appOne/app/: build.gradle.kts
autoSoftDev/desPattern/: CMakeLists.txt  main.cpp
autoSoftDev/desPattern/include/: camera.hpp  chassis.hpp  file.hpp  gyro.hpp  interface.hpp  lidar.hpp  power.hpp  smartCar.hpp  student.hpp  tyre.hpp
autoSoftDev/desPattern/src/: agx.cpp  chassis.cpp  file.cpp  gyro.cpp  interface.cpp  power.cpp  rand.cpp  smartCar.cpp  tyre.cpp
autoSoftDev/objectOriented-afClass/6-1/: main.cpp
autoSoftDev/objectOriented-afClass/6-2/: CMakeLists.txt
autoSoftDev/objectOriented-afClass/6-3/: main.cpp
autoSoftDev/objectOriented-afClass/6-4/: main.cpp
autoSoftDev/objectOriented-afClass/6-6/: main.cpp
autoSoftDev/objectOriented-afClass/6-7/: main.cpp
autoSoftDev/objectOriented-afClass/6-8/: main.cpp
autoSoftDev/procedureOriented-afClass/7-3/: CMakeLists.txt  main.c
dataEngineer/digitReco/: Image Segmentation.ipynb
dataEngineer/trafSignReco/: crawl_images.ipynb  json2txt.ipynb  spilit_dataset.ipynb  test-seg.yaml  test.ipynb  train.ipynb
smartDriveAlgo/pointCloudRegistration/: main.cpp  ndt_test.cpp  optimized_ICP_GN.cpp
(+682 files in other folders)
